syntax = "proto3";

package com.example.demo.grpc.jwt;

option java_multiple_files = true;

// The greeting service definition.
service HelloService {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

// The request message containing the user's name.
message AnotherHelloRequest {
    string name = 1;
}

// The response message containing the greetings
message AnotherHelloReply {
    string message = 1;
}

// Another greeting service definition.
service AnotherHelloService {
    // Sends a greeting
    rpc SayHello (AnotherHelloRequest) returns (AnotherHelloReply) {
    }
}